--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "elegant-icons": "0.0.1",
     "emailjs-com": "^3.2.0",
     "et-line": "^1.0.1",
+    "ethers": "^5.5.3",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
     "moment": "^2.29.1",
@@ -40,7 +41,8 @@
     "styled-components": "^5.3.1",
     "typesafe-actions": "^5.1.0",
     "web-vitals": "^2.1.0",
-    "web3": "^1.6.1",
+    "web3": "^1.7.0",
+    "web3modal": "^1.9.5",
     "yup": "^0.32.11"
   },
   "scripts": {
